# OCaml-Mille-Bornes

./: .gitignore  README.md  dune-project  mille_bornes.opam
.github/workflows/: github-ci.yml
lib/: arena.ml  arena.mli  board_engine.ml  board_engine.mli  cards_engine.ml  cards_engine.mli  dune  random_bot.ml  random_bot.mli  sad_bot.ml  sad_bot.mli  teams_engine.ml  teams_engine.mli
test/: default_strat.ml  default_strat.mli  dune  test_board_engine.ml  test_cards_engine.ml  test_random_bot.ml  test_sad_bot.ml  test_teams_engine.ml  utils_board_engine.ml  utils_bot.ml  utils_cards_engine.ml  utils_teams_engine.ml
